fix codeblock overflow

--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -94,6 +94,7 @@ article {
   }
 
   section {
+    width: 100%;
     text-align: justify;
     line-height: $line-height;
     overflow: hidden;
