--- a/app/stylesheets/show.scss
+++ b/app/stylesheets/show.scss
@@ -40,3 +40,6 @@ article {
 
   }
 }
+div.highlight {
+  overflow: auto;
+}
